cmake_minimum_required(VERSION 3.5)

project(hackerrank LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(hackerrank main.cpp)
add_executable(SRIN04derethuruf SRIN04derethuruf.cpp)
add_executable(SRIN04kuncipola360 SRIN04kuncipola360.cpp)
add_executable(SRIN02mainpoker SRIN02mainpoker.cpp)
add_executable(SRIN02posisimenteri SRIN02posisimenteri.cpp)
add_executable(SRIN01bersatukitateguh SRIN01bersatukitateguh.cpp)
add_executable(vectorbyref vectorbyref.cpp)
